@@ -75,6 +75,7 @@ V1.1 Release
 -Fixed a bug in the Disable IAvailabilityEffect which was preventing it from handling ContentElements in WPF correctly.
 -Fixed a bug in the AvailabilityEffectConverter related to resolving custom effects from the container.
 -Enabled actions to search for handlers by routing through TemplatedParents in WPF.
+-Fixed a bug with expression tree method calls in .NET 4.0.
 
 V1.1 Release Candidate
 -Added pre-initialization hooks to CaliburnApplication via Marco Amendola's patch.
